# unifiedInterface

./: CMakeLists.txt  HostData.cpp  HostData.h  arrayfireData.cu  arrayfireData.cuh  boostData.cpp  boostData.h  cudaData.cu  cudaData.cuh  main.cu  openclData.cpp  openclData.h  test.cpp  test.h  thrustData.cu  thrustData.cuh
